Experiencia com scullyio

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Ngdex</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-</head>
-<body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ngdex</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
+
+    <meta property="og:title" content="Pokedex" />
+
+    <meta property="og:type" content="website" />
+
+    <meta property="og:url" content="https://scullyio-pkdex.netlify.app" />
+
+    <meta property="og:description" content="Minha Pokedex" />
+
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/GustavoLima93/pokemons-assets/master/Pokemons_gif/pokebola.gif"
+    />
+
+    <meta
+      property="og:image:secure_url"
+      content="https://raw.githubusercontent.com/GustavoLima93/pokemons-assets/master/Pokemons_gif/pokebola.gif"
+    />
+
+    <meta property="og:image:alt" content="Pokedex" />
+
+    <!-- FIM METAS FACEBOOK -->
+
+    <!-- INICIO METAS TWITTER -->
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pokedex" />
+    <meta name="twitter:description" content="Pokedex dev_ghlima" />
+    <meta
+      name="twitter:image"
+      content="https://raw.githubusercontent.com/GustavoLima93/pokemons-assets/master/Pokemons_gif/pokebola.gif"
+    />
+    <meta name="twitter:image:alt" content="Pokedex" />
+    <meta name="twitter:site" content="@dev_ghlima" />
+    <meta name="twitter:creator" content="Pokedex dev_ghlima" />
+
+    <!-- FIM METAS TWITTER -->
+
+    <!-- INICIO METAS LinkedIn -->
+
+    <meta name="author" content="dev_ghlima" />
+
+    <!-- FIM METAS LinkedIn -->
+  </head>
+  <body>
+    <app-root></app-root>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
+  </body>
 </html>
